<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<import type="android.view.View" />

		<import type="com.madebyaron.betterhealth.viewmodel.StepsModel" />

		<variable
			name="model"
			type="StepsModel" />

	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:clipToPadding="false"
		android:orientation="vertical"
		android:padding="@dimen/steps_screen_padding">

		<TextView
			android:id="@+id/steps_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@{model.steps}"
			android:textColor="@color/color_accent"
			android:textSize="64sp"
			app:layout_constraintBottom_toTopOf="@id/steps_unit"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.4"
			app:layout_constraintVertical_chainStyle="packed" />

		<TextView
			android:id="@+id/steps_unit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/steps_taken_today"
			android:textSize="20sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/steps_view" />

		<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
			android:id="@+id/start_step_counter_button"
			style="@style/ExtendedFloatingActionButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/steps_screen_button_spacing"
			android:onClick="@{() -> model.startStepCounter()}"
			android:text="@string/start_step_counter"
			android:visibility="@{model.showStartButton ? View.VISIBLE : View.GONE}"
			app:icon="@drawable/ic_walk_24px"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/steps_unit" />

		<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
			android:id="@+id/stop_step_counter_button"
			style="@style/ExtendedFloatingActionButton.Light"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/steps_screen_button_spacing"
			android:onClick="@{() -> model.stopStepCounter()}"
			android:text="@string/stop_step_counter"
			android:visibility="@{model.showStopButton ? View.VISIBLE : View.GONE}"
			app:icon="@drawable/ic_walk_24px"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/steps_unit" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</layout>